# django-starter-kit

./: .gitlab-ci.yml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
server/apps/core/rest/: filters.py
server/settings/environments/: local.py.example  test.py
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_slug}}/deploy/: Dockerfile
{{cookiecutter.project_slug}}/deploy/django/: backend.sh
{{cookiecutter.project_slug}}/deploy/nginx/: nginx.conf
{{cookiecutter.project_slug}}/locale/en/LC_MESSAGES/: django.po
{{cookiecutter.project_slug}}/scripts/: quality.sh
{{cookiecutter.project_slug}}/server/: celery_app.py  urls.py
{{cookiecutter.project_slug}}/server/apps/core/admin/: menu.py
{{cookiecutter.project_slug}}/server/apps/core/admin/base/: model_admin.py
{{cookiecutter.project_slug}}/server/apps/core/models/mixins/: timestamps.py
{{cookiecutter.project_slug}}/server/apps/core/utils/: apps.py  objects.py
{{cookiecutter.project_slug}}/server/apps/posts/: __init__.py  apps.py
{{cookiecutter.project_slug}}/server/apps/posts/admin/: main.py
{{cookiecutter.project_slug}}/server/apps/posts/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/server/apps/posts/models/: category.py  post.py
{{cookiecutter.project_slug}}/server/apps/users/admin/: main.py  user.py  widgets.py
{{cookiecutter.project_slug}}/server/apps/users/models/: token.py  user.py
{{cookiecutter.project_slug}}/server/apps/users/templates/users/widgets/: permissions.html
{{cookiecutter.project_slug}}/server/settings/components/: apps.py  auth.py  docs.py  drf.py  i18n.py  logs.py  middleware.py  templates.py
{{cookiecutter.project_slug}}/server/settings/environments/: build.py  dev.py.example  development.py.example  production.py  test.py
{{cookiecutter.project_slug}}/tests/: base.py  conftest.py
{{cookiecutter.project_slug}}/tests/fixtures/: users.py
{{cookiecutter.project_slug}}/tests/test_users/factories/: token.py
{{cookiecutter.project_slug}}/tests/test_users/test_models/: test_users.py
