[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.6"
python-decouple = "^3.1"
django = "2.*"
django-admin-autocomplete-filter = "*"
django-health-check = "*"
{%- if cookiecutter.use_drf == "y" %}
djangorestframework = "*"
django-cors-headers = "*"
drf-yasg = "*"
{%- endif %}
django_extensions = "*"
django-split-settings = "*"
django-model-utils = "*"
django-filter = "*"
jnt-django-bitfield = "*"
jnt-django-admin-tools = "*"
{%- if cookiecutter.use_docker == "y" %}
uWSGI = "*"
{%- endif %}
{%- if cookiecutter.use_celery == "y" %}
celery = "4.1.*"
flower = "*"
redis = "*"
{%- endif %}
{%- if cookiecutter.database == "postgresql" %}
psycopg2-binary = "*"
{%- endif %}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
flake8 = "*"
ipython = "*"
mypy = "*"
factory-boy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"