[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "*"
django = "3.*"
django-admin-autocomplete-filter = "*"
django-health-check = "*"
{%- if cookiecutter.use_drf == "y" %}
djangorestframework = "*"
django-cors-headers = "*"
{%- endif %}
django_extensions = "*"
django-split-settings = "*"
django-model-utils = "*"
django-filter = "*"
jnt-django-bitfield = "*"
jnt-django-admin-tools = "*"
{%- if cookiecutter.use_docker == "y" %}
uWSGI = "*"
{%- endif %}
{%- if cookiecutter.use_celery == "y" %}
celery = "4.1.*"
flower = "*"
redis = "*"
{%- endif %}
{%- if cookiecutter.database == "postgresql" %}
psycopg2-binary = "*"
{%- endif %}

[tool.poetry.dev-dependencies]
mypy = "*"
polint = "*"
dennis = "*"
xenon = "*"
safety = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
factory-boy = "*"
flake8 = "*"
flake8-pytest = "*"
flake8-django = "*"
flake8-pytest-style = "*"
wemake-python-styleguide = "*"
black = "^19.10b0"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | .*\/migrations
  )/
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"