[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.8"
python-decouple = "^3.1"
django = "3.*"
django-health-check = "*"
djangorestframework = "*"
{%- if cookiecutter.use_drf == "y" %}
django-cors-headers = "*"
drf-yasg = "*"
{%- endif %}
django_extensions = "*"
django-split-settings = "*"
django-model-utils = "*"
django-filter = "*"
jnt-django-admin-tools = "*"
jnt-django-toolbox = {version = "*", extras = ["jaeger"]}
{%- if cookiecutter.use_docker == "y" %}
gunicorn = "*"
uvicorn = "*"
{%- endif %}
{%- if cookiecutter.use_celery == "y" %}
celery = "*"
flower = "*"
redis = "*"
{%- endif %}
{%- if cookiecutter.database == "postgresql" %}
psycopg2-binary = "*"
{%- endif %}

[tool.poetry.dev-dependencies]
pytest = "5.*" # problem with integrity
pytest-cov = "*"
pytest-django = "*"
pytest-xdist = "*"
factory-boy = "*"
freezegun = "*"
flake8 = "*"
flake8-django = "*"
flake8-pytest-style = "*"
flake8-pytest = "*"
flake8-class-attributes-order = "*"
mypy = "*"
httpretty = "*"
wemake-python-styleguide = "*"
polint = "*"
dennis = "*"
safety = "*"
xenon = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"